--- a/Aula_02_Codelab_1.ipynb
+++ b/Aula_02_Codelab_1.ipynb
@@ -128,11 +128,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "PRzXmCNn9Cfs",
-        "outputId": "b7a4674b-39fa-4163-ea90-0c193efa569a"
+        "id": "PRzXmCNn9Cfs"
       },
       "source": [
         "name = str(input('O seu nome: '))\n",
@@ -143,23 +139,7 @@
         "print(f'\\n\\nNome: {name}\\nEndereço: {address}\\nCEP: {postal} e Fone: {phone}')"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "O seu nome: Gabriel\n",
-            "O seu endereço: Rua de casa\n",
-            "O seu CEP: 709870\n",
-            "O seu Fone: 70987\n",
-            "\n",
-            "\n",
-            "Nome: Gabriel\n",
-            "Endereço: Rua de casa\n",
-            "CEP: 709870 e Fone: 70987\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -173,35 +153,25 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "8t4u8RE1_qui",
-        "outputId": "ec17efec-823c-44a4-a461-d890586f1f20"
+        "id": "8t4u8RE1_qui"
       },
       "source": [
-        "print(f'Atirei o pau no gato\\nMas o gato não morreu\\nDona Chica admirou-se\\nDo berro, do berro que o gato deu\\nMiau!\\n\\nAtirei o pau no gato\\nMas o gato não morreu\\nDona Chica admirou-se\\nDo berro, do berro que o gato deu\\nMiau!')"
+        "print(f'''\n",
+        "Atirei o pau no gato\n",
+        "Mas o gato não morreu\n",
+        "Dona Chica admirou-se\n",
+        "Do berro, do berro que o gato deu\n",
+        "Miau!\n",
+        "\n",
+        "Atirei o pau no gato\n",
+        "Mas o gato não morreu\n",
+        "Dona Chica admirou-se\n",
+        "Do berro, do berro que o gato deu\n",
+        "Miau!\n",
+        "''')"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Atirei o pau no gato\n",
-            "Mas o gato não morreu\n",
-            "Dona Chica admirou-se\n",
-            "Do berro, do berro que o gato deu\n",
-            "Miau!\n",
-            "\n",
-            "Atirei o pau no gato\n",
-            "Mas o gato não morreu\n",
-            "Dona Chica admirou-se\n",
-            "Do berro, do berro que o gato deu\n",
-            "Miau!\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -234,11 +204,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "DXILvyBJEwYz",
-        "outputId": "29b6077f-e4d0-4f9e-ce32-54c3d0a20ce0"
+        "id": "DXILvyBJEwYz"
       },
       "source": [
         "print('''\n",
@@ -251,22 +217,7 @@
         "''')"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "ALUNO (A)  NOTA\n",
-            "=========  ====\n",
-            "ALINE      9.0\n",
-            "MÁRIO      DEZ\n",
-            "SÉRGIO     4.5\n",
-            "SHIRLEY    7.0\n",
-            "\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -287,11 +238,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "AblEtjXHWBfI",
-        "outputId": "e4ec9a9c-eb88-4a6b-cfef-cb1922ae6856"
+        "id": "AblEtjXHWBfI"
       },
       "source": [
         "from math import ceil\n",
@@ -303,19 +250,7 @@
         "\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Vida do Monstro [entre 10 e 50]: 15\n",
-            "Força do jogador [entre 5 e 10]: 4\n",
-            "\n",
-            "\n",
-            "O jogador irá derrotar o monstro em 4 turnos\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -344,11 +279,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jbcSv4NFkB1C",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "2b3a358d-63f1-4f9e-ee45-9e26aacff606"
+        "id": "jbcSv4NFkB1C"
       },
       "source": [
         "meal = float(42.54) #valor da refeição\n",
@@ -358,18 +289,7 @@
         "print(f'Valor da refeição: R$ {meal:.2f}\\nValor da gorjeta: R$ {(meal * tip):.2f}\\n---\\nTotal: R$ {total:.2f}')\n"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Valor da refeição: R$ 42.54\n",
-            "Valor da gorjeta: R$ 4.25\n",
-            "---\n",
-            "Total: R$ 46.79\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -389,11 +309,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "hBf3kE_pksAI",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b5c59789-5ff4-480c-8fbe-b1a0cee0f5b2"
+        "id": "hBf3kE_pksAI"
       },
       "source": [
         "purchase = float(100.98)\n",
@@ -403,20 +319,7 @@
         "print(f'\\n\\nTotal da compra: R$ {purchase:.2f}\\nValor pago: R$ {payment:.2f}\\n---\\nTroco: R$ {change:.2f}')"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "\n",
-            "\n",
-            "Total da compra: R$ 100.98\n",
-            "Valor pago: R$ 150.00\n",
-            "---\n",
-            "Troco: R$ 49.02\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -435,11 +338,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "kyXxJV3nk14Z",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "5a792ed0-cce9-4996-9d76-1b19749333be"
+        "id": "kyXxJV3nk14Z"
       },
       "source": [
         "birthdate = int(input(\"Ano de Nascimento: \"))\n",
@@ -449,16 +348,7 @@
         "print(f'Você tem {age} e está na flor da idade')"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Ano de Nascimento: 2005\n",
-            "Você tem 16 e está na flor da idade\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -535,11 +425,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "VdjHa9Csl0Lg",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "16b22918-817f-42a9-c550-ab6f38a4e65f"
+        "id": "VdjHa9Csl0Lg"
       },
       "source": [
         "rent = float(input('Valor do aluguel: R$ '))\n",
@@ -548,17 +434,7 @@
         "print(f'\\n\\nValor do aluguel = R$ {rent:.2f}\\nValor do aluguel reajustado = R$ {rentAmount:.2f}')"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Valor do aluguel: R$ 1000\n",
-            "Valor do aluguel = R$ 1000.00\n",
-            "Valor do aluguel reajustado = R$ 1310.00\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -582,11 +458,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "aw2Zk_9KmA85",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "b6820888-adc2-460a-edcb-f1c627562954"
+        "id": "aw2Zk_9KmA85"
       },
       "source": [
         "rent = float(input('Valor do aluguel: R$ '))\n",
@@ -598,21 +470,7 @@
         "print(f'Valor do aluguel reajustado: R$ {rent * rentAmount:.2f}')"
       ],
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Valor do aluguel: R$ 1000\n",
-            "Valor do IGPM: 30\n",
-            "\n",
-            "\n",
-            "Valor do aluguel: R$ 1000.00\n",
-            "Percentual do reajuste: 30%\n",
-            "Valor do aluguel reajustado: R$ 1300.00\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     }
   ]
 }
