--- a/projetos/Projeto01–Detetive.ipynb
+++ b/projetos/Projeto01–Detetive.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Projeto01–Detetive.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNyYXkv4M7gWUzgpj2BOq3y",
+      "authorship_tag": "ABX9TyMASzph0JtyC3I+MaFOuftU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,15 +64,22 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "_iUv3h1q7dnz",
-        "outputId": "56616db1-4804-4dd8-e30f-0d49b515adc1"
+        "outputId": "f87f730a-9cfe-4946-f455-6a5852e457e5"
       },
       "source": [
+        "# !pip install art\n",
+        "\n",
         "# ART is a Python lib for text converting to ASCII art fancy. ;-) \n",
         "# https://pypi.org/project/art/\n",
-        "import art;\n",
+        "\n",
+        "# uncomment (removing the #) next line to install Art \n",
+        "#!pip install art \n",
+        "from art import *;\n",
         "\n",
         "# COLORAMA makes ANSI escape character sequences (for producing colored terminal text and cursor positioning) work under MS Windows. \n",
         "# https://pypi.org/project/colorama/\n",
+        "# uncomment (removing the #) next line to install Colorama \n",
+        "#!pip install colorama \n",
         "from colorama import Fore;\n",
         "\n",
         "from time import sleep;\n",
@@ -99,12 +106,12 @@
         "tprint('DETETIVE', 'rnd-large'); # ASCII print art\n",
         "detective = \"\\u0332\".join(\"Sherlock Holmes\"); # You can change the name of the detective\n",
         "\n",
-        "# print(f'''{blue}{draw * 65}\n",
-        "# Olá, eu sou o detetive {detective}.\n",
-        "# Vou fazer cinco perguntas e quero respostas simples: {bBold}SIM ou NÃO{eBold}{blue}.\n",
-        "# Vamos começar!\n",
-        "# {draw * 65}\n",
-        "# ''')\n",
+        "print(f'''{blue}{draw * 65}\n",
+        "Olá, eu sou o detetive {detective}.\n",
+        "Vou fazer cinco perguntas e quero respostas simples: {bBold}SIM ou NÃO{eBold}{blue}.\n",
+        "Vamos começar!\n",
+        "{draw * 65}\n",
+        "''')\n",
         "\n",
         "# print(resColor)\n",
         "\n",
@@ -145,28 +152,28 @@
         "else:\n",
         "  print(f'{green}Você é {bBold}INOCENTE{eBold}{green} do crime!')"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            ":::::::::  :::::::::: ::::::::::: :::::::::: ::::::::::: ::::::::::: :::     ::: :::::::::: \r\n",
-            ":+:    :+: :+:            :+:     :+:            :+:         :+:     :+:     :+: :+:        \r\n",
-            "+:+    +:+ +:+            +:+     +:+            +:+         +:+     +:+     +:+ +:+        \r\n",
-            "+#+    +:+ +#++:++#       +#+     +#++:++#       +#+         +#+     +#+     +:+ +#++:++#   \r\n",
-            "+#+    +#+ +#+            +#+     +#+            +#+         +#+      +#+   +#+  +#+        \r\n",
-            "#+#    #+# #+#            #+#     #+#            #+#         #+#       #+#+#+#   #+#        \r\n",
-            "#########  ##########     ###     ##########     ###     ###########     ###     ########## \r\n",
+            " _______   _______ .___________. _______ .___________. __  ____    ____  _______ \r\n",
+            "|       \\ |   ____||           ||   ____||           ||  | \\   \\  /   / |   ____|\r\n",
+            "|  .--.  ||  |__   `---|  |----`|  |__   `---|  |----`|  |  \\   \\/   /  |  |__   \r\n",
+            "|  |  |  ||   __|      |  |     |   __|      |  |     |  |   \\      /   |   __|  \r\n",
+            "|  '--'  ||  |____     |  |     |  |____     |  |     |  |    \\    /    |  |____ \r\n",
+            "|_______/ |_______|    |__|     |_______|    |__|     |__|     \\__/     |_______|\r\n",
+            "                                                                                 \r\n",
             "\n",
             "Você telefonou para a vítima? SIM ou NÃO: s\n",
             "Você esteve no local do crime? SIM ou NÃO: s\n",
-            "Você mora perto da vítima?: SIM ou NÃO: s\n",
+            "Você mora perto da vítima?: SIM ou NÃO: n\n",
             "Você devia para a vítima?: SIM ou NÃO: n\n",
             "Você já trabalhou com a vítima?: SIM ou NÃO: n\n",
             "\n",
             "Estamos processando as suas respostas...\n",
             "\n",
-            "\u001b[33mVocê é considerado como \u001b[1mCÚMPLICE\u001b[0m\u001b[33m do crime\n"
+            "\u001b[36mVocê é considerado como \u001b[1mSUSPEITO\u001b[0m\u001b[36m do crime\n"
           ],
           "name": "stdout"
         }
