--- a/projetos/Projeto01–Detetive.ipynb
+++ b/projetos/Projeto01–Detetive.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Projeto01–Detetive.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPVuaJ5fPaxXaU60oRqzlUa",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyOmjBk8/LqiupSoBt8VgPZv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -60,24 +61,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "_iUv3h1q7dnz",
-        "outputId": "f87f730a-9cfe-4946-f455-6a5852e457e5"
+        "id": "_iUv3h1q7dnz"
       },
       "source": [
         "# ART is a Python lib for text converting to ASCII art fancy. ;-) \n",
         "# https://pypi.org/project/art/\n",
-        "# uncomment (removing the #) next line to install Art \n",
+        "# !! uncomment (removing the #) next line to install Art !!\n",
         "#!pip install art \n",
         "from art import *;\n",
-        "\n",
-        "# COLORAMA makes ANSI escape character sequences (for producing colored terminal text and cursor positioning) work under MS Windows. \n",
-        "# https://pypi.org/project/colorama/\n",
-        "# uncomment (removing the #) next line to install Colorama \n",
-        "#!pip install colorama \n",
-        "from colorama import Fore;\n",
         "\n",
         "from time import sleep;\n",
         "\n",
@@ -89,39 +80,39 @@
         "# ➡️ 5 YES - GUILTY\n",
         "# ➡️ 0 YES - INOCCENT\n",
         "\n",
-        "blue = Fore.BLUE; # Print in BLUE color\n",
-        "cyan = Fore.CYAN; # Print in CYAN color\n",
-        "green = Fore.GREEN; # Print in GREEN color\n",
-        "yellow = Fore.YELLOW; # Print YELLOW color\n",
-        "red = Fore.RED; # Print in RED color\n",
-        "bBold = '\\u001b[1m'; # Start BOLD\n",
-        "eBold = '\\u001b[0m'; # End BOLD\n",
-        "resColor = '\\033[39m'; # Reset to default color\n",
+        "blue = '\\033[94m'; # Print in BLUE color\n",
+        "cyan = '\\033[96m'; # Print in CYAN color\n",
+        "green = '\\033[92m'; # Print in GREEN color\n",
+        "yellow = '\\033[93m' # Print YELLOW color\n",
+        "red = '\\033[91m'; # Print in RED color\n",
+        "beginBold = '\\u001b[1m'; # Start BOLD\n",
+        "endBold = '\\u001b[0m'; # End BOLD\n",
+        "resetColor = '\\033[39m'; # Reset to default color\n",
         "\n",
         "draw = '#';\n",
         "\n",
         "tprint('DETETIVE', 'rnd-large'); # ASCII print art\n",
         "detective = \"\\u0332\".join(\"Sherlock Holmes\"); # You can change the name of the detective\n",
         "\n",
-        "print(f'''{blue}{draw * 65}\n",
+        "print(f'''{blue}{draw * 65}\\n\n",
         "Olá, eu sou o detetive {detective}.\n",
-        "Vou fazer cinco perguntas e quero respostas simples: {bBold}SIM ou NÃO{eBold}{blue}.\n",
-        "Vamos começar!\n",
+        "Vou fazer cinco perguntas e quero respostas simples: {beginBold}SIM ou NÃO{endBold}{blue}.\n",
+        "Vamos começar!\\n\n",
         "{draw * 65}\n",
         "''')\n",
         "\n",
-        "# print(resColor)\n",
+        "print(resetColor)\n",
         "\n",
-        "# sleep(5)\n",
+        "sleep(3)\n",
         "\n",
         "q1 = str(input(\"Você telefonou para a vítima? SIM ou NÃO: \" )).lower()[0]; # Did you call the victim? YES or NO:\n",
-        "sleep(2);\n",
+        "sleep(1);\n",
         "q2 = str(input(\"Você esteve no local do crime? SIM ou NÃO: \" )).lower()[0]; # Were you at the crime scene? YES or NO:\n",
-        "sleep(2);\n",
+        "sleep(1);\n",
         "q3 = str(input(\"Você mora perto da vítima?: SIM ou NÃO: \" )).lower()[0]; # Do you live close the victim? YES or NO:\n",
-        "sleep(2);\n",
+        "sleep(1);\n",
         "q4 = str(input(\"Você devia para a vítima?: SIM ou NÃO: \" )).lower()[0]; # Did you owe the victim money? YES or NO:\n",
-        "sleep(2);\n",
+        "sleep(1);\n",
         "q5 = str(input(\"Você já trabalhou com a vítima?: SIM ou NÃO: \" )).lower()[0]; # Did work with the victim? YES or NO:\n",
         "\n",
         "# Count YES answers\n",
@@ -140,41 +131,18 @@
         "print('\\nEstamos processando as suas respostas...\\n');\n",
         "sleep(3);\n",
         "\n",
+        "\n",
         "if count > 0 and count <= 2:\n",
-        "  print(f'{cyan}Você é considerado como {bBold}SUSPEITO{eBold}{cyan} do crime');\n",
+        "  print(f'{cyan}{draw * 65}\\n\\nVocê é considerado como {beginBold}SUSPEITO{endBold}{cyan} do crime\\n\\n{draw * 65}');\n",
         "elif count > 2 and count <= 4:\n",
-        "  print(f'{yellow}Você é considerado como {bBold}CÚMPLICE{eBold}{yellow} do crime');\n",
+        "  print(f'{yellow}{draw * 65}\\n\\nVocê é considerado como {beginBold}CÚMPLICE{endBold}{yellow} do crime\\n\\n{draw * 65}');\n",
         "elif count == 5:\n",
-        "  print(f'{red}Você é considerado como {bBold}CULPADO{eBold}{red} do crime');\n",
+        "  print(f'{red}{draw * 65}\\n\\nVocê é considerado como {beginBold}CULPADO{endBold}{red} do crime\\n\\n{draw * 65}');\n",
         "else:\n",
-        "  print(f'{green}Você é {bBold}INOCENTE{eBold}{green} do crime!')"
+        "  print(f'{green}{draw * 65}\\n\\nVocê é {beginBold}INOCENTE{endBold}{green} do crime!\\n\\n{draw * 65}')\n"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            " _______   _______ .___________. _______ .___________. __  ____    ____  _______ \r\n",
-            "|       \\ |   ____||           ||   ____||           ||  | \\   \\  /   / |   ____|\r\n",
-            "|  .--.  ||  |__   `---|  |----`|  |__   `---|  |----`|  |  \\   \\/   /  |  |__   \r\n",
-            "|  |  |  ||   __|      |  |     |   __|      |  |     |  |   \\      /   |   __|  \r\n",
-            "|  '--'  ||  |____     |  |     |  |____     |  |     |  |    \\    /    |  |____ \r\n",
-            "|_______/ |_______|    |__|     |_______|    |__|     |__|     \\__/     |_______|\r\n",
-            "                                                                                 \r\n",
-            "\n",
-            "Você telefonou para a vítima? SIM ou NÃO: s\n",
-            "Você esteve no local do crime? SIM ou NÃO: s\n",
-            "Você mora perto da vítima?: SIM ou NÃO: n\n",
-            "Você devia para a vítima?: SIM ou NÃO: n\n",
-            "Você já trabalhou com a vítima?: SIM ou NÃO: n\n",
-            "\n",
-            "Estamos processando as suas respostas...\n",
-            "\n",
-            "\u001b[36mVocê é considerado como \u001b[1mSUSPEITO\u001b[0m\u001b[36m do crime\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
